# telegram-quiz-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
backend/: __init__.py  backends.py
backend/filesystem/: filesystem.py
backend/sqlite/: sqlite.py
bot/: .env.example  Dockerfile  __init__.py  bot.py  config.py  docker-compose.yml
core/: __init__.py  config.py  constants.py  exam.py  exam_service.py  knowledge.py  latex.py  learn_service.py  llm.py  log.py  pool.py  problems.py  question.py  refinement.py  selector.py  service.py  srs.py  storage.py
core/data/: README.md  exam_template.tex  remedial_exam_template.tex
core/data/prompts/rubrics/: exam_grader.md  grader.md  relational_grader.md  teach_it_back.md
core/data/prompts/system/: bridge_question.md  exam_grader.md  examiner.md  grader.md  relational_grader.md  scaffolded_derivation.md  teach_it_back.md  wrong_transposition.md
core/data/prompts/user/: bridge_question.md  exam_grader_image.md  exam_grader_text.md  examiner.md  examiner_weak_section.md  grader.md  relational_grader.md  scaffolded_derivation.md  teach_it_back.md  wrong_transposition.md
core/data/schemas/: bridge_question.json  exam_grade_result.json  exam_problems.json  grade_result.json  relational_grade_result.json  scaffolded_derivation.json  teach_it_back_result.json  wrong_transposition.json
core/schemas/: answer_schemas.py  kg_schemas.py  llm_schemas.py  question_schemas.py  schemas.py  topic_schemas.py
frontend/telegram_bot/: .env.example  Dockerfile  bot.py  config.py  docker-compose.yml
frontend/web/: USAGE.md  constants.py  dependencies.py  logging_config.py  main.py  middleware.py  session.py  session_store.py
frontend/web/routers/: exam.py  learn.py  practice.py  quiz.py
frontend/web/schemas/: schema.py
frontend/web/templates/: exam_config.html  exam_form.html  exam_results.html  feedback.html  learn_config.html  learn_feedback.html  practice_config.html  practice_summary.html  question.html  quiz.html
ollama/: docker-compose.yml
quiz/: __init__.py  log.py  pool.py  question.py  refinement.py  schemas.py  selector.py  srs.py  storage.py
scripts/: bridge_vault.py  migrate_extract_topics.py  migrate_v2_schema.py  start-web.sh
sync/: pull_answers.sh  push_code.sh  push_pool.sh
tests/: conftest.py  test_bot.py  test_data.py  test_exam.py  test_exam_router.py  test_exam_service.py  test_filesystem_backend.py  test_knowledge.py  test_learn_service.py  test_llm.py  test_log.py  test_observability.py  test_pool.py  test_problems.py  test_question.py  test_refinement.py  test_router_session_isolation.py  test_schemas.py  test_selector.py  test_service.py  test_session_store.py  test_srs.py  test_web_constants.py
web/: main.py
web/routers/: exam.py  learn.py  practice.py  quiz.py
web/schemas/: schema.py
web/static/: style.css
web/templates/: exam_config.html  exam_form.html  exam_results.html  index.html  learn_config.html  learn_exercise.html  learn_feedback.html  practice_config.html  practice_summary.html  quiz.html  summary.html
